# PilotAssistant

./: .gitignore  CLAUDE.md  HUD_SETUP.md  MENU_PROTOCOL.md  README.md  main.py  pilot-assistant.service  pilot_assistant_system.py  requirements.txt  stop_pilot_assistant.sh
.claude/: settings.local.json
Simulator/: README.md  README_USB_BULK.md  monitor_serial.py  pico_usb_receiver.py  send_telemetry.py  send_telemetry_test.py  simulate_pico_input.py  simulator.py  simulator_usb_bulk.py  simulator_usb_bulk_auto.py
classes/: __init__.py  gps_service.py  pilot_assistant_system.py  traffic_service.py
debug/: DebugAdxl345.py  DebugCamera.py  DebugGPS.py  key_demo.py  simple_gps_test.py
documentation/: CLAUDE.md  GYRO_OFFSET_FEATURE.md  STATUS.md  TELEMETRY_SYSTEM.md
menu/: bluetooth_menu.py  fly_menu.py  gps_menu.py  gyro_menu.py  setup_menu.py  stream_menu.py  traffic_menu.py
menu2/: bluetooth_menu.py  go_fly_menu.py
pico/: CMakeLists.txt  attitude_indicator.c  attitude_indicator.h  boot.py  input_handler.py  main.py  main_menu.c  splash_loader.py  st7789.py  telemetry_parser.c  upload_to_pico.sh
pico/Backup/: input_handler.py  main.py  st7789.py
pico/BasicGyro/: CMakeLists.txt  icm20948_sensor.h  madgwick.c  main.c  readme.md  st7789_lcd.c  test_lcd.c
pico/archive/old_joystick_system/: README.md  attitude_indicator.c  mag_calibration.c  mag_calibration.h
pico/c/: CMakeLists.txt  README.md  convert_icon_to_bin.py  convert_svg_simple.py  convert_svg_to_bin.py  icm20948_sensor.c  icm20948_sensor.h  input_handler.h  lwipopts.h  main.c.OLD  main_command_sender.c  main_menu.c  mbedtls_config.h  menu.c  menu.h  st7789_lcd.c  st7789_lcd.h  telemetry_parser.c  telemetry_parser.h
pico/c/assets/Splash Converter/: convert_png_proper.py  convert_svg_direct.py
pico/c/assets/img/: battery_icon.h  bluetooth32_icon.h  bluetooth_button.h  bt_button_icon.h  plane_icon.h  setting_icon.h
pico/c/drivers/: ahrs_core.c  ahrs_core.h  bluetooth_manager.c  bluetooth_manager.h  icm20948_sensor.c  icm20948_sensor.h  madgwick_filter.c  madgwick_filter.h  opensky_client.c  opensky_client.h  st7789_lcd.c  st7789_lcd.h  wifi_manager.c  wifi_manager.h  xpt2046_touch.c  xpt2046_touch.h
pico/c/img/: gps_icon.h  splash_data.h  wifi_icon.h
pico/c/src/: input_handler.c  main_ahrs_standalone.c  main_icm_test.c  main_input_test.c  main_menu.c  main_touch_test.c  menu.c  menu.h  telemetry_parser.h
pico/drivers/: icm20948_sensor.c  madgwick_filter.c  madgwick_filter.h  st7789_lcd.c  st7789_lcd.h
pico/img/: bluetooth_icon.h  warning_icon.h
pico/menu/: go_fly_menu.py
pico/microPython/: README.md  main.py  st7789.py  upload_to_pico.sh
pico/microPython/menu/: artificial_horizon.py  bluetooth_menu.py
pico2/: main.py  st7789.py
rpi/: main.py
rpi/c/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  pico_receiver  pilot_assistant
rpi/c/debug/: Makefile  adxl345  adxl345.c  cam_to_lcd.c  camera.c  camera_fixed  camera_libcamera  camera_libcamera.c  camera_libcamera.cpp  camera_test  debug_lcd  gps  gps.c  lcd.c  mpu6050  mpu6050.c  pico_commands  pico_commands.c
rpi/c/include/: adxl345.h  gps.h  mpu6050.h  pico_commands.h  serial_comm.h  st7789_rpi.h
rpi/c/src/: adxl345.c  gps.c  main.c  main_test.c  menu_hud.c  mpu6050.c  pico_commands.c  pico_receiver.c  serial_comm.c  st7789_rpi.c
rpi/debug/: test_gps_menu.py
rpi/menu/: stream_menu.py
rpi/python/: main.py
rpi/python/debug/: DebugCamera.py
rpi/python/menu/: gps_menu.py  traffic_menu.py
rpi/python/service/: traffic_service.py
rpi/service/: attitude_service.py  pilot_assistant_system.py  wifi_service.py
